tests/lang/parse-fail-dup-formals.err.exp
error: duplicate formal function argument 'x'

       at «stdin»:1:8:

            1| {x, y, x}: x
             |        ^
